test/tests/stages/14_pointers/invalid_parse/malformed_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  (
  *
  )
  *
  identifier(y)
  ;
  return
  const int(0)
  ;
  }
